[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
log = "0.4.0"
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4.2"
project-root = "0.2.2"
crossbeam = "0.8.1"